Updated roles to ping